--- a/arq/composer.json
+++ b/arq/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "slim/slim": "^3.0",
-        "tuupola/slim-jwt-auth": "^3.5"
+        "tuupola/slim-jwt-auth": "^3.5",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
